--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "faceapp": "^0.4.4",
     "fast-html-parser": "^1.0.1",
     "figlet": "^1.2.0",
-    "markovchain": "^1.0.2"
+    "markovchain": "^1.0.2",
+    "node-opus": "^0.3.0",
+    "ytdl-core": "^0.25.2"
   }
 }
