--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "klasa-bot-plugin",
-  "version": "1.0.16",
+  "version": "1.0.18",
   "description": "A klasa plugin for any discord bot using the klasa framework to enable a ton of features easily.",
   "main": "index.js",
   "scripts": {
@@ -21,9 +21,9 @@
   },
   "homepage": "https://github.com/Skillz4Killz/klasa-bot-plugin#readme",
   "dependencies": {
-    "faceapp": "^0.4.4",
     "fast-html-parser": "^1.0.1",
-    "figlet": "^1.2.0",
-    "markovchain": "^1.0.2"
+    "figlet": "^1.2.1",
+    "markovchain": "^1.0.2",
+    "publish": "^0.6.0"
   }
 }
